--- a/product-ms/.gitlab-ci.yml
+++ b/product-ms/.gitlab-ci.yml
@@ -12,6 +12,9 @@ build:
   stage: build
   tags:
     - docker
+  image: docker:20.10.16
+  services:
+    - docker:20.10.16-dind
   script:
     - docker build -t $DOCKER_IMAGE_NAME:$DOCKER_IMAGE_TAG .
     - docker tag $DOCKER_IMAGE_NAME:$DOCKER_IMAGE_TAG $DOCKER_IMAGE_NAME:latest
