--- a/product-ms/.gitlab-ci.yml
+++ b/product-ms/.gitlab-ci.yml
@@ -4,6 +4,8 @@ stages:
 variables:
   DOCKER_IMAGE_NAME: product-service
   DOCKER_IMAGE_TAG: latest
+  DOCKER_REGISTRY_USER: guizo792
+  DOCKER_REGISTRY_TOKEN: dckr_pat_DOvcjGLc9RjFHNE9-aTzIDnSqys
 
 before_script:
   - echo 'HERE WE GO...'
@@ -16,6 +18,9 @@ build:
   image: docker:20.10.16
   services:
     - docker:20.10.16-dind
+  before_script:
+    - docker login -u $DOCKER_REGISTRY_USER -p $DOCKER_REGISTRY_TOKEN
   script:
     - docker build -t $DOCKER_IMAGE_NAME:$DOCKER_IMAGE_TAG .
     - docker tag $DOCKER_IMAGE_NAME:$DOCKER_IMAGE_TAG $DOCKER_IMAGE_NAME:latest
+    - docker push $IMAGE_NAME:$IMAGE_TAG
