--- a/product-ms/.gitlab-ci.yml
+++ b/product-ms/.gitlab-ci.yml
@@ -14,6 +14,9 @@ build:
   image: docker:20.10.16
   services:
     - docker:20.10.16-dind
+  variables:
+    DOCKER_TLS_CERTDIR: "/certs"
+
   before_script:
     - docker login -u $DOCKER_REGISTRY_USER -p $DOCKER_REGISTRY_TOKEN
     - cd product-ms
