--- a/product-ms/.gitlab-ci.yml
+++ b/product-ms/.gitlab-ci.yml
@@ -1,26 +1,54 @@
-stages:
-  - build
+image: node:latest
 
 variables:
-  DOCKER_IMAGE_NAME: product-service
-  DOCKER_IMAGE_TAG: latest
-  DOCKER_REGISTRY_USER: guizo792
-  DOCKER_REGISTRY_TOKEN: dckr_pat_dsXZ2z4kYEfgKw58WggXvgrt5kc
+  IMAGE_NAME: abdo20/product-ms
+  IMAGE_TAG: app
+  REGISTRY_USER: abdo20
+  REGISTRY_PASS: dckr_pat_dsXZ2z4kYEfgKw58WggXvgrt5kc
+  CACHE_PATH: node_modules/
 
-before_script:
-  - docker login -u $DOCKER_REGISTRY_USER -p $DOCKER_REGISTRY_TOKEN
-  - cd product-ms
+stages:
+  - build
+  - scan
+  - publish
+  - test
 
-build:
+include:
+  - template: Security/Dependency-Scanning.gitlab-ci.yml
+
+product-ms-build:
   stage: build
-  tags:
-    - docker
+  before_script:
+    - cd product-ms
+  script:
+    - npm install
+  artifacts:
+    paths:
+      - node_modules
+  cache:
+    key: ${CACHE_PATH}-${CI_COMMIT_REF_SLUG}
+    paths:
+      - ${CACHE_PATH}
+
+product-ms-scan:
+  stage: scan
+  before_script:
+    - cd product-ms
+  script:
+    - npm install
+    - npm audit
+
+product-ms-publish:
+  stage: publish
   image: docker:20.10.16
   services:
     - docker:20.10.16-dind
   variables:
     DOCKER_TLS_CERTDIR: "/certs"
+  before_script:
+    - cd product-ms
+    - docker login -u $REGISTRY_USER -p $REGISTRY_PASS
+
   script:
-    - docker build -t $DOCKER_IMAGE_NAME:$DOCKER_IMAGE_TAG .
-    - docker tag $DOCKER_IMAGE_NAME:$DOCKER_IMAGE_TAG $DOCKER_IMAGE_NAME:latest
-    - docker push $DOCKER_IMAGE_NAME:$DOCKER_IMAGE_TAG
+    - docker build -t $IMAGE_NAME:$IMAGE_TAG .
+    - docker push $IMAGE_NAME:$IMAGE_TAG
