--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,3 +29,10 @@ clientui:
   rules:
     - changes:
         - clientui/**/*
+auth-ms:
+  stage: triggers
+  trigger:
+    include: auth-ms/.gitlab-ci.yml
+  rules:
+    - changes:
+        - auth-ms/**/*
