--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,21 @@
 {
-  "cSpell.words": ["clientui"]
+  "cSpell.words": [
+    "Cette",
+    "clientui",
+    "commande",
+    "Commande",
+    "correspondante",
+    "d'établir",
+    "erreur",
+    "Erreur",
+    "lors",
+    "paiement",
+    "Paiement",
+    "payée",
+    "RABBITMQ",
+    "réessayez",
+    "survenue",
+    "tard",
+    "trouvée"
+  ]
 }
